--- a/task2/rest-api-basics/service/src/main/resources/messages_ru.properties
+++ b/task2/rest-api-basics/service/src/main/resources/messages_ru.properties
@@ -8,3 +8,5 @@
 2002 = Подарочный сертификат уже существует
 2003 = Невозможно удалить подарочный сертификат
 2004 = Невозможно обновить подарочный сертификат
+
+0000 = Внутренняя ошибка сервера
