--- a/task2/rest-api-basics/service/src/main/resources/messages_en.properties
+++ b/task2/rest-api-basics/service/src/main/resources/messages_en.properties
@@ -8,3 +8,5 @@
 2002 = Gift Certificate already exists
 2003 = Unable to delete Gift Certificate
 2004 = Unable to update Gift Certificate
+
+0000 = Internal server error
