add dto and request params validation
add validation exceptions

minor fixes

--- a/task2/rest-api-basics/service/src/main/resources/messages_en.properties
+++ b/task2/rest-api-basics/service/src/main/resources/messages_en.properties
@@ -9,4 +9,11 @@
 2003 = Unable to delete Gift Certificate
 2004 = Unable to update Gift Certificate
 
+# Tag validation
+1011 = The parameters in the Tag body are not valid
+
+# Gift Certificate validation
+2011 = The parameters in the Gift Certificate body are not valid
+2012 = The requested parameters for the gift certificate are not validated
+
 0000 = Internal server error
