--- a/task2/rest-api-basics/service/src/main/resources/messages_ru.properties
+++ b/task2/rest-api-basics/service/src/main/resources/messages_ru.properties
@@ -9,4 +9,11 @@
 2003 = Невозможно удалить подарочный сертификат
 2004 = Невозможно обновить подарочный сертификат
 
+# Tag validation
+1011 = Параметры в теле тэга не валидны
+
+# Gift Certificate validation
+2011 = Параметры в теле подарочный сертификата не валидены
+2012 = Запрашиваемы параметры для подарочный сертификат не валидны
+
 0000 = Внутренняя ошибка сервера
