move error messages to web
minor fixes

--- a/task3/web/src/main/resources/messages_en.properties
+++ b/task3/web/src/main/resources/messages_en.properties
@@ -9,6 +9,9 @@
 2003 = Unable to delete Gift Certificate
 2004 = Unable to update Gift Certificate
 
+# User
+3001 = User not found
+
 # Tag validation
 1011 = The parameters in the Tag body are not valid
 
