--- a/task3/web/src/main/resources/messages_ru.properties
+++ b/task3/web/src/main/resources/messages_ru.properties
@@ -12,6 +12,9 @@
 # Tag validation
 1011 = Параметры в теле тэга не валидны
 
+# User
+3001 = Пользователь не найден
+
 # Gift Certificate validation
 2011 = Параметры в теле подарочный сертификата не валидены
 2012 = Запрашиваемы параметры для подарочный сертификат не валидны
