--- a/task3/web/src/main/resources/messages_en.properties
+++ b/task3/web/src/main/resources/messages_en.properties
@@ -19,4 +19,8 @@
 2011 = The parameters in the Gift Certificate body are not valid
 2012 = The requested parameters for the gift certificate are not validated
 
+# Constraints
+0001 = Invalid arguments
+0011 = The argument must be of the type {0}
+
 0000 = Internal server error
