--- a/task3/web/src/main/resources/messages_ru.properties
+++ b/task3/web/src/main/resources/messages_ru.properties
@@ -19,4 +19,8 @@
 2011 = Параметры в теле подарочный сертификата не валидены
 2012 = Запрашиваемы параметры для подарочный сертификат не валидны
 
+# Constraints
+0001 = Недопустимые аргументы
+0011 = Аргумент должен быть типа {0}
+
 0000 = Внутренняя ошибка сервера
