add unit tests in service layer
update exceptions, messages

--- a/task3/web/src/main/resources/messages_en.properties
+++ b/task3/web/src/main/resources/messages_en.properties
@@ -12,12 +12,8 @@
 # User
 3001 = User not found
 
-# Tag validation
-1011 = The parameters in the Tag body are not valid
-
-# Gift Certificate validation
-2011 = The parameters in the Gift Certificate body are not valid
-2012 = The requested parameters for the gift certificate are not validated
+# Order
+4001 = Order not found
 
 # Constraints
 0001 = Invalid arguments
