--- a/task3/web/src/main/resources/messages_ru.properties
+++ b/task3/web/src/main/resources/messages_ru.properties
@@ -9,15 +9,11 @@
 2003 = Невозможно удалить подарочный сертификат
 2004 = Невозможно обновить подарочный сертификат
 
-# Tag validation
-1011 = Параметры в теле тэга не валидны
-
 # User
 3001 = Пользователь не найден
 
-# Gift Certificate validation
-2011 = Параметры в теле подарочный сертификата не валидены
-2012 = Запрашиваемы параметры для подарочный сертификат не валидны
+# Order
+4001 = Заказ не найден
 
 # Constraints
 0001 = Недопустимые аргументы
